# RobotPerceiver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/alpha/: alpha_audio.npy  alpha_text.npy  alpha_vision.npy
log/perceiver-mosi/seed42/: training_log_20250905_133058.csv  training_log_20250905_133058.txt  training_log_20250905_133527.csv  training_log_20250905_133527.txt
models/: perceiver.py  perceiver_mask.py
perceiver-pytorch/perceiver_pytorch/: perceiver_pytorch.py
preprocess/: merge_segments.py  whisperProcess.py
preprocess/data/clips/: label.csv
run/: test.py  train.py  val.py
scripts/: hsic_lasso.py  hsic_lasso_v2.py  inspect_pkl.py  mask_net.py  perceiver_comment.py  perceiver_dynamicmask_train.py  perceiver_dynamicmask_v2.py  train.py
scripts/data/alpha/: alpha_audio.npy  alpha_masks.npz  alpha_text.npy  alpha_vision.npy
scripts/log/per-hsic-mosi/seed42/: training_log_20250905_140445.csv  training_log_20250905_140445.txt
src/perceiver_pytorch/: myperceiver.py  perceiver_pytorch.py
utils/: config_loader.py  dataLoader.py  logger.py  pkl_utils.py  visualizer.py
visualization/: plot_alpha.py
